# pba-individu

./: .gitignore  README.md  pyproject.toml
quiz/: articles.csv  quiz.ipynb  scraped_articles.csv
week-2/: 1-scrapping.ipynb  2-eda.ipynb
week-3/: 3-preprocessing.ipynb
week-4/: 4-bow.ipynb  5-eda.ipynb
week-5/: 6-vsm.ipynb
week-6/: Week_7_PBA_NER.ipynb
