[project]
name = "pba-individu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-play-scraper>=1.2.7",
    "ipykernel>=7.2.0",
    "langid>=1.1.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "pysastrawi>=1.2.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "symspellpy>=6.9.0",
    "textblob>=0.20.0",
]
