[project]
name = "pba-individu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "datasets>=4.8.4",
    "google-play-scraper>=1.2.7",
    "huggingface-hub>=1.10.2",
    "ipykernel>=7.2.0",
    "langid>=1.1.6",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pip>=26.0.1",
    "pysastrawi>=1.2.0",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.14",
    "symspellpy>=6.9.0",
    "textblob>=0.20.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
